--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory(apps)
 add_subdirectory(interface)
 add_subdirectory(driver)
 add_subdirectory(mapping)
-#add_subdirectory(planning)
+add_subdirectory(planning)
 add_subdirectory(control)
 add_subdirectory(utilities)
 
