--- a/src/planning/CMakeLists.txt
+++ b/src/planning/CMakeLists.txt
@@ -2,9 +2,9 @@
 add_subdirectory(graph)
 add_subdirectory(geometry)
 add_subdirectory(decomp)
-add_subdirectory(third_party)
 
 # under revision
-# add_subdirectory(sampling)
-add_subdirectory(state_lattice)
-add_subdirectory(decision)
+add_subdirectory(sampling)
+
+# add_subdirectory(state_lattice)
+# add_subdirectory(decision)
