--- a/src/planning/geometry/CMakeLists.txt
+++ b/src/planning/geometry/CMakeLists.txt
@@ -1,6 +1,5 @@
 ## Dependency libraries
 find_package(Eigen3 REQUIRED NO_MODULE)
-find_package(TBB REQUIRED)
 
 ## Add libraries
 add_library(geometry STATIC 
@@ -9,7 +8,7 @@ add_library(geometry STATIC
     src/parametric_curve.cpp
     src/polygon.cpp
 )
-target_link_libraries(geometry cvdraw Eigen3::Eigen ${TBB_LIBRARIES})
+target_link_libraries(geometry cvdraw Eigen3::Eigen)
 target_compile_definitions(geometry PUBLIC ENABLE_VISUAL)
 target_include_directories(geometry PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
