sampling: changed raw pointer to shared_ptr for tree states

--- a/src/planning/sampling/CMakeLists.txt
+++ b/src/planning/sampling/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package(Eigen3 REQUIRED NO_MODULE)
 # Add libraries
 set(SAMPLING_LIB_SRC
     src/rand_num_gen.cpp
+    # src/realvector_state.cpp
 )
 add_library(sampling ${SAMPLING_LIB_SRC})
 target_link_libraries(sampling graph geometry spatial cvdraw Eigen3::Eigen)
