--- a/src/visualization/ncview/CMakeLists.txt
+++ b/src/visualization/ncview/CMakeLists.txt
@@ -4,14 +4,14 @@ find_package(Curses REQUIRED)
 
 # add library
 add_library(ncview
-    src/ncviewer.cpp
-    src/ncwindow.cpp)
+        src/nc_viewer.cpp
+        src/nc_subwindow.cpp)
 target_link_libraries(ncview PUBLIC ${CURSES_LIBRARIES})
 target_include_directories(ncview PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-    PRIVATE src)
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+        PRIVATE src)
 
-if(BUILD_TESTS)
+if (BUILD_TESTS)
     add_subdirectory(test)
-endif()
+endif ()
