ncview: implemented OnResize() for sub window

--- a/src/visualization/ncview/CMakeLists.txt
+++ b/src/visualization/ncview/CMakeLists.txt
@@ -5,7 +5,9 @@ find_package(Curses REQUIRED)
 # add library
 add_library(ncview
         src/nc_viewer.cpp
-        src/nc_subwindow.cpp)
+        src/nc_subwindow.cpp
+        src/nc_container.cpp
+        src/nc_hbox.cpp)
 target_link_libraries(ncview PUBLIC ${CURSES_LIBRARIES})
 target_include_directories(ncview PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
