--- a/src/visualization/ncview/CMakeLists.txt
+++ b/src/visualization/ncview/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(ncview
         src/nc_viewer.cpp
         src/nc_subwindow.cpp
         src/nc_container.cpp
-        src/nc_hbox.cpp)
+        src/nc_hbox.cpp
+        src/nc_vbox.cpp)
 target_link_libraries(ncview PUBLIC ${CURSES_LIBRARIES})
 target_include_directories(ncview PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
