joystick: driver is working

--- a/src/driver/input_joystick/test/CMakeLists.txt
+++ b/src/driver/input_joystick/test/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(test_evdev test_evdev.cpp)
 target_link_libraries(test_evdev evdev)
+
+add_executable(test_joystick test_joystick.cpp)
+target_link_libraries(test_joystick input_joystick)
