cyclonedds: disabled test

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(apps)
 
 # Modules
 add_subdirectory(interface)
-add_subdirectory(ipc)
+#add_subdirectory(ipc)
 add_subdirectory(driver)
 add_subdirectory(mapping)
 add_subdirectory(planning)
