--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -12,9 +12,9 @@ target_include_directories(stopwatch INTERFACE
 
 add_subdirectory(spatial)
 
-set(BUILD_DDSPERF OFF CACHE INTERNAL "Build the performance test" FORCE)
-set(BUILD_TESTING OFF CACHE INTERNAL "Build the testing tree" FORCE)
-set(ENABLE_SHM OFF CACHE INTERNAL "Enable shared memory transport" FORCE)
-set(ENABLE_SECURITY OFF CACHE INTERNAL "Enable security" FORCE)
-set(ENABLE_TYPE_DISCOVERY ON CACHE INTERNAL "Enable type discovery" FORCE)
-add_subdirectory(cyclonedds)
+# set(BUILD_DDSPERF OFF CACHE INTERNAL "Build the performance test" FORCE)
+# set(BUILD_TESTING OFF CACHE INTERNAL "Build the testing tree" FORCE)
+# set(ENABLE_SHM OFF CACHE INTERNAL "Enable shared memory transport" FORCE)
+# set(ENABLE_SECURITY OFF CACHE INTERNAL "Enable security" FORCE)
+# set(ENABLE_TYPE_DISCOVERY ON CACHE INTERNAL "Enable type discovery" FORCE)
+# add_subdirectory(cyclonedds)
