ci: updated ci to install cyclonedds

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,19 @@ jobs:
       matrix:
         os: [ ubuntu-20.04, ubuntu-22.04 ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Install cyclonedds
+        run: |
+          git clone https://github.com/eclipse-cyclonedds/cyclonedds.git
+          cd cyclonedds && mkdir build && cd build
+          cmake -DBUILD_EXAMPLES=OFF -DBUILD_TESTING=OFF -DENABLE_SHM=NO ..
+          make -j && sudo make install
+      - uses: actions/checkout@v3
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev libglfw3-dev libcairo2-dev libtbb-dev libasio-dev libboost-all-dev libgsl-dev libeigen3-dev libtbb-dev libopencv-dev libyaml-cpp-dev libncurses-dev libevdev-dev
+        run: |
+          sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev \
+           libglfw3-dev libcairo2-dev libtbb-dev libasio-dev libboost-all-dev \
+           libgsl-dev libeigen3-dev libtbb-dev libopencv-dev libyaml-cpp-dev \
+           libncurses-dev libevdev-dev
       - name: Update submodules
         run: git submodule update --init --recursive
       - name: Create Build Environment
@@ -39,9 +49,19 @@ jobs:
       matrix:
         os: [ ubuntu-20.04, ubuntu-22.04 ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Install cyclonedds
+        run: |
+          git clone https://github.com/eclipse-cyclonedds/cyclonedds.git
+          cd cyclonedds && mkdir build && cd build
+          cmake -DBUILD_EXAMPLES=OFF -DBUILD_TESTING=OFF -DENABLE_SHM=NO ..
+          make -j && sudo make install
+      - uses: actions/checkout@v3
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev libglfw3-dev libcairo2-dev libtbb-dev libasio-dev libboost-all-dev libgsl-dev libeigen3-dev libtbb-dev libopencv-dev libyaml-cpp-dev libncurses-dev libevdev-dev
+        run: |
+          sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev \
+           libglfw3-dev libcairo2-dev libtbb-dev libasio-dev libboost-all-dev \
+           libgsl-dev libeigen3-dev libtbb-dev libopencv-dev libyaml-cpp-dev \
+           libncurses-dev libevdev-dev
       - name: Update submodules
         run: git submodule update --init --recursive
       - name: Create Build Environment
@@ -50,10 +70,6 @@ jobs:
         shell: bash
         working-directory: ${{runner.workspace}}/build
         run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_TESTING=ON
-      - name: Build
-        working-directory: ${{runner.workspace}}/build
-        shell: bash
-        run: cmake --build . --config $BUILD_TYPE
       - name: Build
         working-directory: ${{runner.workspace}}/build
         shell: bash
