ipc: cyclone node can talk with ros2 now

--- a/src/ipc/test/CMakeLists.txt
+++ b/src/ipc/test/CMakeLists.txt
@@ -14,3 +14,11 @@ target_link_libraries(test_dds_pub HelloWorldData_lib CycloneDDS::ddsc)
 
 add_executable(test_dds_sub test_dds_sub.c)
 target_link_libraries(test_dds_sub HelloWorldData_lib CycloneDDS::ddsc)
+
+idlc_generate(TARGET ros2_msg FILES "String.idl" WARNINGS no-implicit-extensibility)
+
+add_executable(test_ros2_pub test_ros2_pub.cpp)
+target_link_libraries(test_ros2_pub ros2_msg HelloWorldData_lib CycloneDDS::ddsc)
+
+add_executable(test_ros2_sub test_ros2_sub.cpp)
+target_link_libraries(test_ros2_sub ros2_msg HelloWorldData_lib CycloneDDS::ddsc)
