--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "src/visualization/imcore/implot"]
 	path = src/visualization/imcore/implot
 	url = https://github.com/epezent/implot.git
+[submodule "src/ipc/ros2_idl"]
+	path = src/ipc/ros2_idl
+	url = git@github.com:rxdu/ros-data-types.git
