--- a/src/control/CMakeLists.txt
+++ b/src/control/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 
 ## installation configuration
 #install(TARGETS control
-#        EXPORT roboswTargets
+#        EXPORT xmotionTargets
 #        LIBRARY DESTINATION lib
 #        ARCHIVE DESTINATION lib
 #        RUNTIME DESTINATION bin
