--- a/src/ipc/dds_ipc/CMakeLists.txt
+++ b/src/ipc/dds_ipc/CMakeLists.txt
@@ -1,17 +1,17 @@
-#find_package(lcm REQUIRED)
-#include(${LCM_USE_FILE})
-#
-#lcm_wrap_types(
-#        C_EXPORT ipc_lcmtypes
-#        C_SOURCES c_sources
-#        C_HEADERS c_headers
-#        CPP_HEADERS cpp_headers
-#        lcmtypes/example_t.lcm)
-#
-#lcm_add_library(ipc_lcmtypes-cpp CPP ${cpp_headers})
-#target_include_directories(ipc_lcmtypes-cpp INTERFACE
-#        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
+## Dependency libraries
+find_package(CycloneDDS REQUIRED)
 
-if(BUILD_TESTS)
+## Add libraries
+add_library(dds_ipc STATIC
+        src/dds_topic.cpp
+        src/dds_publisher.cpp
+        src/dds_participant.cpp)
+target_link_libraries(dds_ipc PUBLIC CycloneDDS::ddsc)
+target_include_directories(dds_ipc PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+        PRIVATE src)
+
+if (BUILD_TESTS)
     add_subdirectory(test)
-endif()
+endif ()
