--- a/cmake/xmotionConfig.cmake.in
+++ b/cmake/xmotionConfig.cmake.in
@@ -9,4 +9,4 @@ find_dependency(Threads REQUIRED)
 # Any extra setup
 
 # Add the targets file
-include("${CMAKE_CURRENT_LIST_DIR}/roboswTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/xmotionTargets.cmake")
