--- a/src/teleop/js_teleop/CMakeLists.txt
+++ b/src/teleop/js_teleop/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(js_teleop src/joystick_teleop.cpp)
-target_link_libraries(js_teleop PUBLIC input_joystick)
+target_link_libraries(js_teleop PUBLIC input_joystick motor_vesc)
 target_include_directories(js_teleop PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
