--- a/src/control/CMakeLists.txt
+++ b/src/control/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(Eigen3 REQUIRED NO_MODULE)
 # 	$<INSTALL_INTERFACE:include>)
 
 add_library(control src/pid_controller.cpp)
-target_link_libraries(control PUBLIC utilities Eigen3::Eigen ${Boost_LIBRARIES})
+target_link_libraries(control PUBLIC Eigen3::Eigen ${Boost_LIBRARIES})
 target_include_directories(control PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
@@ -21,12 +21,12 @@ if(BUILD_TESTS)
 endif()
 
 ## installation configuration
-#install(TARGETS control
-#        EXPORT xmotionTargets
-#        LIBRARY DESTINATION lib
-#        ARCHIVE DESTINATION lib
-#        RUNTIME DESTINATION bin
-#        INCLUDES DESTINATION include)
-#
-#install(DIRECTORY include/
-#        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/control)
+install(TARGETS control
+        EXPORT xmotionTargets
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION include)
+
+install(DIRECTORY include/
+        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
