imcore: updated imgui to v1.90-docking, implot to v0.16, updated cmake for imcore

--- a/src/visualization/imcore/CMakeLists.txt
+++ b/src/visualization/imcore/CMakeLists.txt
@@ -18,15 +18,10 @@ set(IMGUI_BACKEND_SRC
 set(GL_LOADER_SRC
     imgui/examples/libs/gl3w/GL/gl3w.c
 )
-set(IMPLOT_SRC
-    implot/implot.cpp
-    implot/implot_items.cpp
-    # implot/implot_demo.cpp
-)
-add_library(imcore ${IMGUI_CORE_SRC} ${IMGUI_BACKEND_SRC} ${IMPLOT_SRC})
-target_link_libraries(imcore PUBLIC glfw OpenGL::GL ${GLFW3_LIBRARY} ${CMAKE_DL_LIBS})
-target_compile_definitions(imcore PUBLIC "-DIMGUI_IMPL_OPENGL_LOADER_GL3W")
-target_include_directories(imcore PUBLIC
+add_library(imgui ${IMGUI_CORE_SRC} ${IMGUI_BACKEND_SRC})
+target_link_libraries(imgui PUBLIC glfw OpenGL::GL ${GLFW3_LIBRARY} ${CMAKE_DL_LIBS})
+target_compile_definitions(imgui PUBLIC "IMGUI_IMPL_OPENGL_LOADER_GL3W" PRIVATE "IMGUI_DEFINE_MATH_OPERATORS")
+target_include_directories(imgui PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/imgui>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends>
@@ -34,5 +29,19 @@ target_include_directories(imcore PUBLIC
     $<INSTALL_INTERFACE:include/imgui>
     $<INSTALL_INTERFACE:include/imgui/backends>
     $<INSTALL_INTERFACE:include/imgui/examples/libs/gl3w>)
+
+set(IMPLOT_SRC
+    implot/implot.cpp
+    implot/implot_items.cpp
+    # implot/implot_demo.cpp
+)
+add_library(implot ${IMPLOT_SRC})
+target_link_libraries(implot PUBLIC imgui)
+target_include_directories(implot PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include/imgui>)
+
+add_library(imcore INTERFACE)
+target_link_libraries(imcore INTERFACE imgui implot)
 
 add_subdirectory(sample)
