repo: minor cleanups

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,11 +4,12 @@ add_subdirectory(apps)
 
 # Modules
 add_subdirectory(interface)
-# add_subdirectory(ipc)
+# add_subdirectory(ipc)l
 add_subdirectory(driver)
 add_subdirectory(mapping)
-add_subdirectory(planning)
+add_subdirectory(estimation)
 add_subdirectory(control)
+add_subdirectory(planning)
 add_subdirectory(utilities)
 
 if(ENABLE_TARGET_DESKTOP)
