--- a/src/driver/sensor_imu/test/devel/CMakeLists.txt
+++ b/src/driver/sensor_imu/test/devel/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(test_hipnuc test_hipnuc.cpp)
-target_link_libraries(test_hipnuc driver)
+target_link_libraries(test_hipnuc sensor_imu)
 
-add_executable(test_vesc_driver test_vesc_driver.cpp)
-target_link_libraries(test_vesc_driver driver)
+add_executable(test_imu_plot test_imu_plot.cpp)
+target_link_libraries(test_imu_plot sensor_imu imview)
 
