interface: added modbus_rtu interface, updated interface headers

--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_subdirectory(file_io)
 # add_subdirectory(image_io)
 add_subdirectory(logging)
+add_subdirectory(time)
 
 add_library(utilities INTERFACE)
 target_link_libraries(utilities INTERFACE file_io logging)
