--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_subdirectory(async_port)
+add_subdirectory(modbus_rtu)
+
 add_subdirectory(motor_vesc)
 add_subdirectory(sensor_imu)
 add_subdirectory(input_joystick)
