akelc: added app for pid tuning

--- a/src/driver/motor_akelc/CMakeLists.txt
+++ b/src/driver/motor_akelc/CMakeLists.txt
@@ -23,6 +23,8 @@ if (AKELC_WITH_MODBUS OR AKELC_WITH_CANOPEN)
       $<INSTALL_INTERFACE:include>
       PRIVATE src)
 
+  add_subdirectory(app)
+
   if (BUILD_TESTS)
     add_subdirectory(test)
   endif ()
