--- a/src/driver/modbus_rtu/CMakeLists.txt
+++ b/src/driver/modbus_rtu/CMakeLists.txt
@@ -1,10 +1,10 @@
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(LibModbus QUIET IMPORTED_TARGET libmodbus)
+pkg_check_modules(LIBMODBUS QUIET IMPORTED_TARGET libmodbus)
 
 if (LIBMODBUS_FOUND)
     add_library(modbus_rtu STATIC
         src/modbus_rtu_port.cpp)
-    target_link_libraries(modbus_rtu PUBLIC interface logging PkgConfig::LibModbus)
+    target_link_libraries(modbus_rtu PUBLIC interface logging PkgConfig::LIBMODBUS)
     target_include_directories(modbus_rtu PUBLIC
             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
             $<INSTALL_INTERFACE:include>
