--- a/src/control/model/test/CMakeLists.txt
+++ b/src/control/model/test/CMakeLists.txt
@@ -6,10 +6,7 @@
 # target_link_libraries(test_bicycle_kin model)
 
 add_executable(test_propagator test_propagator.cpp)
-target_link_libraries(test_propagator control)
+target_link_libraries(test_propagator model)
 
 add_executable(test_propagator2 test_propagator2.cpp)
-target_link_libraries(test_propagator2 control)
-
-add_executable(test_pid test_pid.cpp)
-target_link_libraries(test_pid control)
+target_link_libraries(test_propagator2 model)
