--- a/src/control/robot_base/CMakeLists.txt
+++ b/src/control/robot_base/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(Eigen3 REQUIRED NO_MODULE)
 add_library(robot_base
     src/speed_actuator_group.cpp
     src/differential_drive_robot.cpp)
-target_link_libraries(robot_base PUBLIC interface Eigen3::Eigen)
+target_link_libraries(robot_base PUBLIC interface logging Eigen3::Eigen)
 target_include_directories(robot_base PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
