--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 ## Add source directories
 # Application
-add_subdirectory(apps)
+if (BUILD_APPS)
+  add_subdirectory(apps)
+endif ()
 
 # Modules
 add_subdirectory(interface)
@@ -12,6 +14,6 @@ add_subdirectory(control)
 add_subdirectory(planning)
 add_subdirectory(utilities)
 
-if(ENABLE_TARGET_DESKTOP)
-add_subdirectory(visualization)
-endif()
+if (ENABLE_TARGET_DESKTOP)
+  add_subdirectory(visualization)
+endif ()
