driver: added keyboard

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -4,4 +4,4 @@ add_subdirectory(modbus_rtu)
 add_subdirectory(motor_akelc)
 add_subdirectory(motor_vesc)
 add_subdirectory(sensor_imu)
-add_subdirectory(input_joystick)
+add_subdirectory(input_hid)
