--- a/src/control/robot_base/app/CMakeLists.txt
+++ b/src/control/robot_base/app/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(app_tbot_base_control app_tbot_base_control.cpp)
-target_link_libraries(app_tbot_base_control PRIVATE robot_base motor_akelc input_joystick)
+target_link_libraries(app_tbot_base_control PRIVATE robot_base motor_akelc input_hid)
