tbot: moved tbot from apps to platform

--- a/src/platform/CMakeLists.txt
+++ b/src/platform/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_subdirectory(quadruped)
+if (ENABLE_TBOT_APP)
+  add_subdirectory(tbot)
+endif ()
+
+if (ENABLE_QUADRUPED_APP)
+  add_subdirectory(quadruped)
+endif ()
